--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Pranjal",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3"
   }
 }
