--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=8000
+CORS_ORIGIN=*
+
 MONGODB_URI=mongodb+srv://pranjal__17:XjSF0wEYH0fGivkE@cluster0.7denh.mongodb.net/myDatabaseName?retryWrites=true&w=majority
